--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -30,6 +30,8 @@
 	</array>
 	<key>PlexPluginConsoleLogging</key>
 	<string>1</string>
+	<key>PlexClientPlatforms</key>
+	<string>*</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
 	<key>PlexVideoCodec</key>
