--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -21,6 +21,10 @@
 		<string>MP3</string>
 		<string>AAC</string>
 	</array>
+	<key>PlexClientPlatformExclusions</key>
+	<string>Roku</string>
+	<key>PlexClientPlatforms</key>
+	<string>*</string>
 	<key>PlexFrameworkVersion</key>
 	<string>2</string>
 	<key>PlexMediaContainer</key>
@@ -30,8 +34,6 @@
 	</array>
 	<key>PlexPluginConsoleLogging</key>
 	<string>1</string>
-	<key>PlexClientPlatforms</key>
-	<string>*</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
 	<key>PlexVideoCodec</key>
